--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -4,6 +4,8 @@
 @import "base/base";   /* Bitters needs to be imported before Neat */
 @import "neat";
 
+@import "partials/variables";
 @import "partials/layout";
 @import "partials/modules";
+@import "partials/theme";
 
