--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -1,6 +1,7 @@
 // Typography
 $sans-serif: $helvetica;
-$serif: $georgia;
+//$serif: $georgia;
+$serif: "Raleway", Georgia;
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
 
