--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -23,8 +23,9 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-section {
-  @include outer_container;
+section, footer {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 
   .section-title {
     text-align: center;
@@ -34,13 +35,18 @@ section {
 .l_cell {
   text-align: center;
 
+  padding-left: .5rem;
+  padding-right: .5rem;
+
   @include span-columns(4);
 
   @include media($tablet) {
     @include span-columns(8);
+    margin-bottom: 2rem;
   }
 
   @include media($mobile) {
     @include span-columns(4);
+    margin-bottom: 2rem;
   }
 }
