Ready for subscription form

--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -1,13 +1,15 @@
 <header class="navigation">
   <div class="navigation-wrapper">
-    <a ref="/" class="logo">
-      <div class="logo-text"><%= settings.site_name %></div>
-    </a>
+    <div class="logo">
+      <a href="/" class="logo-text"><%= settings.site_name %></a>
+    </div>
+    <!-- Will add this later
     <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
       <ul id="js-navigation-menu" class="navigation-menu show">
-        <li class="nav-link"><a href="http://github.com/pferdefleisch/thepickmachine.com" target="_blank">Source</a></li>
+        <li class="nav-link"><a href="http://github.com/pferdefleisch/goingnative.io" target="_blank">Source</a></li>
       </ul>
     </div>
+    -->
   </div>
 </header>
