--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -20,11 +20,9 @@
     <link href="favicon.ico" rel="icon" type="image/ico"></link>
     <%= stylesheet_link_tag "normalize", "all" %>
   </head>
-  <body class="<%= page_classes %>" ng-app="thepickmachine">
+  <body class="<%= page_classes %>">
     <%= partial "nav" %>
     <%= yield %>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <%= javascript_include_tag  "application" %>
   </body>
 </html>
