--- a/source/stylesheets/partials/_variables.scss
+++ b/source/stylesheets/partials/_variables.scss
@@ -6,12 +6,25 @@ $light: #ECE5CE;
 $light-text: #FFF;
 $dark-text: #666;
 
-$navigation-section: $medium-dark;
-$navigation-text: $light-text;
+$navigation-background: $dark;
+$navigation-color: $light-text;
+$navigation-color-hover: $medium-dark;
 
 $headline-section: $medium-light;
 $headline-text: $dark-text;
 
 $footer-section: $medium-dark;
 $footer-text: $light-text;
+
+$navigation-padding: 1em;
+$navigation-height: 60px;
+$navigation-nav-button-background: $base-accent-color;
+$navigation-nav-button-background-hover: lighten($navigation-background, 10);
+$navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20);
+$navigation-search-background: lighten($navigation-background, 5);
+$navigation-search-border: 1px solid darken($navigation-background, 5);
+$navigation-active-link-color: transparentize(white, 0.5);
+$navigation-submenu-padding: 1em;
+$navigation-submenu-width: 12em;
+$horizontal-bar-mode: $large-screen;
 
