--- a/source/stylesheets/partials/modules/_nav.scss
+++ b/source/stylesheets/partials/modules/_nav.scss
@@ -1,19 +1,4 @@
 header.navigation {
-  $navigation-padding: 1em;
-  $navigation-background: $dark-gray;
-  $navigation-color: transparentize(white, 0.3);
-  $navigation-color-hover: white;
-  $navigation-height: 60px;
-  $navigation-nav-button-background: $base-accent-color;
-  $navigation-nav-button-background-hover: lighten($navigation-background, 10);
-  $navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20);
-  $navigation-search-background: lighten($navigation-background, 5);
-  $navigation-search-border: 1px solid darken($navigation-background, 5);
-  $navigation-active-link-color: transparentize(white, 0.5);
-  $navigation-submenu-padding: 1em;
-  $navigation-submenu-width: 12em;
-  $horizontal-bar-mode: $large-screen;
-
   background-color: $navigation-background;
   border-bottom: 1px solid darken($navigation-background, 10);
   min-height: $navigation-height;
@@ -28,16 +13,21 @@ header.navigation {
   }
 
   .logo {
-    float: left;
+    text-align: center;
     max-height: $navigation-height;
     padding-left: $navigation-padding;
     padding-right: 2em;
 
     .logo-text {
+      display: inline-block;
       max-height: $navigation-height;
       padding: .8em 0;
       font-size: 23px;
       color: $navigation-color;
+
+      &:hover {
+        color: $navigation-color-hover;
+      }
     }
   }
 
