Added about text

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,7 +19,7 @@ title: Going Native
       <div class="l_cell feature">
         <img class="feature-icon icon-<%= feature.icon %>" src="/images/<%= feature.icon %>.svg"/>
         <h3 class="feature-name"><%= feature.name %></h3>
-        <p class="section-body feature-description">
+        <p class="cell-body feature-description">
           <%= feature.description %>
         </p>
       </div>
