--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -32,9 +32,6 @@ section, footer {
   }
 
 
-  .section-body {
-    font-size: 14px;
-  }
 }
 
 
@@ -64,4 +61,8 @@ section, footer {
     @include span-columns(4);
     margin-bottom: 2rem;
   }
+}
+
+.cell-body {
+  font-size: 14px;
 }
