Signup form is done

--- a/source/stylesheets/partials/_variables.scss
+++ b/source/stylesheets/partials/_variables.scss
@@ -13,8 +13,14 @@ $navigation-color-hover: $medium-dark;
 $headline-section: $medium-light;
 $headline-text: $dark-text;
 
+$signup-form-background: $medium;
+$signup-form-color: $dark-text;
+
 $footer-section: $medium-dark;
 $footer-text: $light-text;
+
+$base-button-color: $medium-dark;
+$hover-button-color: darken($base-button-color, 10);
 
 $navigation-padding: 1em;
 $navigation-height: 60px;
