--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -27,6 +27,13 @@ title: Going Native
   </div>
 </section>
 
+<section class="signup-form">
+  <div class="container">
+    <%= partial 'signup_form' %>
+  </div>
+</section>
+
+
 <footer class="l_cells">
   <div class="container">
     <div class="l_cell footer-cell about">
