--- a/source/stylesheets/partials/_theme.scss
+++ b/source/stylesheets/partials/_theme.scss
@@ -22,3 +22,9 @@ footer {
   color: $footer-text;
 }
 
+input[type='submit'] {
+  background-color: $base-button-color;
+  &:hover {
+    background-color: $hover-button-color;
+  }
+}
