--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta/>
-    <!-- Always force latest IE rendering engine or request Chrome Frame
-    -->
-    <meta/>
-    <meta/>
-    <!-- Use title if it's in the page YAML frontmatter
-    -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="description" content="<%= data.content.meta.description %>">
+    <meta name="keywords" content="<%= data.content.meta.keywords.join(', ') %>">
     <title>
-      <%= current_page.data.title %>
+      <%= current_page.data.title %> | <%= data.content.meta.title %>
     </title>
     <link href="apple-touch-icon-152x152-precomposed.png" rel="apple-touch-icon" sizes="152x152"></link>
     <link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon" sizes="144x144"></link>
@@ -24,5 +21,6 @@
     <%= partial "nav" %>
     <%= yield %>
     <%= javascript_include_tag  "application" %>
+    <%= partial 'analytics' %>
   </body>
 </html>
