--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -29,7 +29,8 @@ title: Going Native
 
 <section class="signup-form">
   <div class="container">
-    <%= partial 'signup_form' %>
+    <%= partial 'partials/signup_form' %>
+    <%= partial 'partials/survey' %>
   </div>
 </section>
 
