Make coming soon bigger

--- a/source/stylesheets/partials/_theme.scss
+++ b/source/stylesheets/partials/_theme.scss
@@ -6,6 +6,8 @@ header.navigation {
 .headline-container .headline-sub {
   background-color: $light;
   color: $dark-text;
+  font-size: 22px;
+  margin-bottom: 2rem;
 }
 
 .headline-container .headline-minor {
