--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,13 +8,13 @@
     <title>
       <%= current_page.data.title %> | <%= data.content.meta.title %>
     </title>
-    <link href="apple-touch-icon-152x152-precomposed.png" rel="apple-touch-icon" sizes="152x152"></link>
-    <link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon" sizes="144x144"></link>
-    <link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon" sizes="114x114"></link>
-    <link href="apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon" sizes="72x72"></link>
-    <link href="apple-touch-icon-precomposed.png" rel="apple-touch-icon"></link>
-    <link href="favicon.png" rel="shortcut icon"></link>
-    <link href="favicon.ico" rel="icon" type="image/ico"></link>
+    <link href="apple-touch-icon-152x152-precomposed.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon" sizes="144x144" />
+    <link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon" sizes="114x114" />
+    <link href="apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon" sizes="72x72" />
+    <link href="apple-touch-icon-precomposed.png" rel="apple-touch-icon" />
+    <link href="favicon.png" rel="shortcut icon" />
+    <link href="favicon.ico" rel="icon" type="image/ico" />
     <%= stylesheet_link_tag "normalize", "all" %>
   </head>
   <body class="<%= page_classes %>">
